[tool.poetry]
name = "load-testing"
version = "0.1.0"
description = ""
authors = ["Mark Botterill <markbotters@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.19"


[tool.poetry.group.dev.dependencies]
locust = "^2.29.1"
argparse = "^1.4.0"
numpy = "^2.0.0"
pandas = "^2.2.2"
seaborn = "^0.13.2"
matplotlib = "^3.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80